# Gesture-Detection

./: README.md  gesture.py  gestures.ipynb  main.py  pyproject.toml  test.py
