[tool.poetry]
name = "gestures"
version = "0.1.0"
description = ""
authors = ["Ved Kothavade <ved@kothavade.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0.66"
pyobjc-core = "^8.5.1"
pyobjc = "^8.5.1"
pyautogui = "^0.9.53"
setuptools = "^65.5.0"
easyocr = "^1.6.2"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
